www/src/components/Game/game-layout.css
.fullscreen-game {
  display: grid;
  width: 100%;
  grid-template-columns: 1fr 250px;
  grid-template-rows: min-content minmax(300px, auto) min-content;
}

.player-area {
  border-style: solid;
  border-color: black;
  
}

.player-area-top {
  grid-row: 1;
  grid-column-start: 1;
  grid-column-end: 3;

}


.player-area-bottom {
  grid-row: 3;
  grid-column-start: 1;
  grid-column-end: 3;
}

.points-card-area {
  grid-row: 2;
  grid-column: 1;
}

.points-area {
  grid-row: 2;
  grid-column: 2;
}

